@@ -1,3 +1,11 @@
+2016-02-12  Alex Christensen  <achristensen@webkit.org>
+
+        Fix non-internal builds when using NetworkSession
+        https://bugs.webkit.org/show_bug.cgi?id=152285
+
+        * platform/spi/cf/CFNetworkSPI.h:
+        Add SPI declaration used in r194156.
+
 2016-02-12  Andreas Kling  <akling@apple.com>
 
         Throw out all live resource decoded data on memory pressure / suspension.
